tests/compError/callNotFn.ucl
// compError
// error: can not call type __builtin:Number()
// line:10 -> here
// error: can not call type __builtin:Bool()
// line:11 -> here
// error: can not call type __builtin:String()
// line:12 -> here

add1 = @x(__builtin:Number) x + 1
add1 1 2
true false
"test" 4